Opened 13 years ago

Closed 13 years ago

Last modified 13 years ago

#2842 closed defect (fixed)

g2m4: invalid write with fuzzed file

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: g2m4
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

http://www1.datafilehost.com/d/ff22ad05

knoppix@Microknoppix:/media/sdb1$ valgrind --leak-check=full ffmpeg/ffmpeg_g -i fg2m4.wmv -an -f null -
==11149== Memcheck, a memory error detector
==11149== Copyright (C) 2002-2011, and GNU GPL'd, by Julian Seward et al.
==11149== Using Valgrind-3.7.0 and LibVEX; rerun with -h for copyright info
==11149== Command: ffmpeg/ffmpeg_g -i fg2m4.wmv -an -f null -
==11149== 
ffmpeg version 2.0 Copyright (c) 2000-2013 the FFmpeg developers
  built on Aug  6 2013 21:17:38 with gcc 4.7 (Debian 4.7.2-4)
  configuration: --enable-gpl --disable-yasm --disable-ffprobe --disable-ffserver
  libavutil      52. 40.100 / 52. 40.100
  libavcodec     55. 20.100 / 55. 20.100
  libavformat    55. 13.101 / 55. 13.101
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 82.100 /  3. 82.100
  libswscale      2.  4.100 /  2.  4.100
  libswresample   0. 17.103 /  0. 17.103
  libpostproc    52.  3.100 / 52.  3.100
[asf @ 0x4303020] packet_frag_size is invalid (5739-19)
[asf @ 0x4303020] ff asf bad header 9  at:114871
[asf @ 0x4303020] unexpected packet_replic_size of -2124145438
[asf @ 0x4303020] ff asf bad header bf  at:122923
[asf @ 0x4303020] invalid packet_length 0 at:122931
[asf @ 0x4303020] ff asf bad header fb  at:131015
[asf @ 0x4303020] invalid packet_length 1652057513 at:131023
[asf @ 0x4303020] ff asf bad header 72  at:139199
[asf @ 0x4303020] invalid packet_length -699928599 at:139205
[asf @ 0x4303020] ff asf bad header 8f  at:147563
[asf @ 0x4303020] ff asf bad header e8  at:156293
[asf @ 0x4303020] invalid packet_length 1070528186 at:156297
[asf @ 0x4303020] ff asf bad header 6d  at:165739
[asf @ 0x4303020] invalid packet_length -1574393100 at:165745
[asf @ 0x4303020] ff asf bad header 1d  at:176635
[asf @ 0x4303020] invalid padsize 357011066 at:176640
[asf @ 0x4303020] packet fragment position invalid 4273931,7968 not in 101328
[asf @ 0x4303020] ff asf bad header 69  at:186897
[asf @ 0x4303020] invalid packet_length 892247670 at:186901
[asf @ 0x4303020] ff asf bad header b6  at:186981
[asf @ 0x4303020] invalid padsize 38614 at:186987
[asf @ 0x4303020] ff asf bad header 0  at:187153
[asf @ 0x4303020] packet_replic_size 311918738 is invalid
[asf @ 0x4303020] ff asf bad header db  at:195489
[asf @ 0x4303020] invalid padsize 630309073 at:195495
[asf @ 0x4303020] ff asf bad header eb  at:204147
[asf @ 0x4303020] invalid packet_length 1748034939 at:204152
[asf @ 0x4303020] ff asf bad header 52  at:213461
[asf @ 0x4303020] packet_replic_size 2009542262 is invalid
[asf @ 0x4303020] ff asf bad header b7  at:282675
[asf @ 0x4303020] invalid padsize 36645 at:282681
[asf @ 0x4303020] ff asf bad header 7f  at:349081
[asf @ 0x4303020] invalid packet_length -263377 at:349092
[asf @ 0x4303020] ff asf bad header b8  at:417903
[asf @ 0x4303020] invalid padsize 1631055833 at:417907
[asf @ 0x4303020] ff asf bad header 64  at:483533
[asf @ 0x4303020] invalid packet_length 680185375 at:483538
[asf @ 0x4303020] ff asf bad header 80  at:550795
[asf @ 0x4303020] packet_replic_size 52879 is invalid
[asf @ 0x4303020] ff asf bad header 19  at:562767
[asf @ 0x4303020] invalid padsize 1487222982 at:562770
[asf @ 0x4303020] freeing incomplete packet size 101328, new 74318
[asf @ 0x4303020] ff asf bad header 8a  at:578833
[asf @ 0x4303020] ff asf skip 7981 (unknown stream)
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 2  at:618855
[asf @ 0x4303020] packet_replic_size 15437 is invalid
[asf @ 0x4303020] ff asf bad header d8  at:626889
[asf @ 0x4303020] invalid padsize -1940646843 at:626894
[asf @ 0x4303020] ff asf bad header 0  at:634943
[asf @ 0x4303020] unexpected packet_replic_size of -795874818
[asf @ 0x4303020] ff asf bad header 77  at:643071
[asf @ 0x4303020] invalid packet_length 1072060426 at:643080
[asf @ 0x4303020] ff asf bad header e3  at:651317
[asf @ 0x4303020] invalid packet_length -450870046 at:651321
[asf @ 0x4303020] ff asf bad header 61  at:659799
[asf @ 0x4303020] invalid packet_length -502393462 at:659802
[asf @ 0x4303020] ff asf bad header 12  at:668761
[asf @ 0x4303020] ff asf skip 1611 (unknown stream)
[asf @ 0x4303020] ff asf bad header 8c  at:678689
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header e9  at:690557
[asf @ 0x4303020] invalid packet_length -903578959 at:690561
[asf @ 0x4303020] ff asf bad header 61  at:706273
[asf @ 0x4303020] invalid packet_length 1575433480 at:706276
[asf @ 0x4303020] freeing incomplete packet size 74318, new 72145
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 0  at:730855
[asf @ 0x4303020] ff asf skip 7990 (unknown stream)
[asf @ 0x4303020] ff asf bad header a5  at:738877
[asf @ 0x4303020] packet_frag_size is invalid (67-6)
[asf @ 0x4303020] ff asf bad header 5f  at:746933
[asf @ 0x4303020] invalid padsize -1825647543 at:746942
[asf @ 0x4303020] ff asf bad header 14  at:755033
[asf @ 0x4303020] invalid padsize 41944 at:755036
[asf @ 0x4303020] ff asf bad header c8  at:763221
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] freeing incomplete packet size 72145, new 72595
[asf @ 0x4303020] freeing incomplete packet size 72595, new 88979
[asf @ 0x4303020] freeing incomplete packet size 88979, new 72595
[asf @ 0x4303020] freeing incomplete packet size 72595, new 72125
[asf @ 0x4303020] packet fragment position invalid 2147502721,7968 not in 72125
[asf @ 0x4303020] ff asf bad header 9e  at:890897
[asf @ 0x4303020] invalid padsize -1104415458 at:890904
[asf @ 0x4303020] ff asf bad header 59  at:890987
[asf @ 0x4303020] invalid padsize 591745646 at:890992
[asf @ 0x4303020] ff asf bad header 51  at:891163
[asf @ 0x4303020] invalid padsize 11075 at:891166
[asf @ 0x4303020] ff asf bad header 71  at:891511
[asf @ 0x4303020] invalid packet_length -242254848 at:891516
[asf @ 0x4303020] ff asf bad header a1  at:892211
[asf @ 0x4303020] packet_replic_size 228 is invalid
[asf @ 0x4303020] ff asf bad header 81  at:901601
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header a6  at:912389
[asf @ 0x4303020] packet_replic_size 2121937381 is invalid
[asf @ 0x4303020] ff asf bad non zero
[asf @ 0x4303020] ff asf bad header 83  at:938845
[asf @ 0x4303020] packet_replic_size 5500160 is invalid
[asf @ 0x4303020] ff asf bad header b0  at:946867
[asf @ 0x4303020] invalid padsize 29216 at:946869
[asf @ 0x4303020] ff asf bad header 7f  at:954891
[asf @ 0x4303020] invalid padsize 1805647293 at:954902
[asf @ 0x4303020] ff asf bad header 53  at:962957
[asf @ 0x4303020] ff asf skip 28276 (unknown stream)
[asf @ 0x4303020] ff asf bad header cd  at:995103
[asf @ 0x4303020] ff asf skip 0 (unknown stream)
    Last message repeated 52 times
[asf @ 0x4303020] ff asf bad header a6  at:1012303
[asf @ 0x4303020] packet_replic_size 166 is invalid
[asf @ 0x4303020] ff asf bad header 43  at:1021785
[asf @ 0x4303020] ff asf skip 0 (unknown stream)
    Last message repeated 46 times
[asf @ 0x4303020] ff asf bad header 8a  at:1066125
[asf @ 0x4303020] ff asf skip 7948 (unknown stream)
[asf @ 0x4303020] freeing incomplete packet size 72125, new 71058
[asf @ 0x4303020] freeing incomplete packet size 71058, new 70665
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 0  at:1138855
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 81  at:1146897
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 9b  at:1154973
[asf @ 0x4303020] invalid padsize -149993757 at:1154977
[asf @ 0x4303020] ff asf bad header 77  at:1163109
[asf @ 0x4303020] invalid packet_length 1202309310 at:1163118
[asf @ 0x4303020] ff asf bad header f2  at:1171391
[asf @ 0x4303020] ff asf bad non zero
[asf @ 0x4303020] ff asf bad header d3  at:1179937
[asf @ 0x4303020] packet_frag_size is invalid (5226-11)
[asf @ 0x4303020] ff asf bad header 52  at:1211553
[asf @ 0x4303020] invalid padsize 17989 at:1211557
[asf @ 0x4303020] freeing incomplete packet size 70665, new 67004
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 0  at:1258855
[asf @ 0x4303020] packet_replic_size 1386393925 is invalid
[asf @ 0x4303020] ff asf bad header e7  at:1266891
[asf @ 0x4303020] invalid packet_length 588722517 at:1266898
[asf @ 0x4303020] ff asf bad header 5a  at:1274953
[asf @ 0x4303020] invalid padsize -623375478 at:1274959
[asf @ 0x4303020] ff asf bad header 61  at:1283075
[asf @ 0x4303020] invalid packet_length 818095195 at:1283078
[asf @ 0x4303020] ff asf bad header 72  at:1291313
[asf @ 0x4303020] invalid packet_length 1306356264 at:1291319
[asf @ 0x4303020] ff asf bad non zero
[asf @ 0x4303020] ff asf bad header 68  at:1308747
[asf @ 0x4303020] invalid packet_length 1082056564 at:1308751
[asf @ 0x4303020] ff asf bad header 32  at:1318659
[asf @ 0x4303020] invalid padsize 62627 at:1318662
[asf @ 0x4303020] ff asf bad header ff  at:1330481
[asf @ 0x4303020] invalid packet_length 2144955362 at:1330492
[asf @ 0x4303020] freeing incomplete packet size 67004, new 8483912
[asf @ 0x4303020] DTS discontinuity in stream 0: packet 6 with DTS 24612, packet 7 with DTS 1073766761
[asf @ 0x4303020] freeing incomplete packet size 8483912, new 95304
[asf @ 0x4303020] freeing incomplete packet size 95304, new 14
[asf @ 0x4303020] packet fragment position invalid 16,14 not in 14
[asf @ 0x4303020] packet_frag_size is invalid (1051-9)
[asf @ 0x4303020] freeing incomplete packet size 14, new 284
[asf @ 0x4303020] freeing incomplete packet size 284, new 14
[asf @ 0x4303020] freeing incomplete packet size 131356, new 2228
[asf @ 0x4303020] packet fragment position invalid 128,23 not in 23
[asf @ 0x4303020] packet_frag_size is invalid (792-9)
[asf @ 0x4303020] packet fragment position invalid 1073741824,2230 not in 2230
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] packet_frag_size is invalid (7986-33)
[asf @ 0x4303020] ff asf bad header 14  at:1466899
[asf @ 0x4303020] invalid padsize 62659 at:1466902
[asf @ 0x4303020] ff asf bad header f9  at:1474951
[asf @ 0x4303020] invalid packet_length 1280027957 at:1474958
[asf @ 0x4303020] ff asf bad header bb  at:1483063
[asf @ 0x4303020] invalid padsize 146324749 at:1483068
[asf @ 0x4303020] ff asf bad header 10  at:1491283
[asf @ 0x4303020] invalid padsize 17044 at:1491284
[asf @ 0x4303020] ff asf bad header 45  at:1499715
[asf @ 0x4303020] freeing incomplete packet size 2230, new 2230
[asf @ 0x4303020] packet fragment position invalid 3806331172,42369 not in 2230
[asf @ 0x4303020] packet_frag_size is invalid (3707-11)
[asf @ 0x4303020] invalid padsize 8368641 at:1506839
[asf @ 0x4303020] ff asf bad header 74  at:1514265
[asf @ 0x4303020] invalid packet_length -78243755 at:1514272
[asf @ 0x4303020] ff asf bad header de  at:1521131
[asf @ 0x4303020] invalid padsize 36014866 at:1521140
[asf @ 0x4303020] ff asf bad header 32  at:1526867
[asf @ 0x4303020] invalid padsize 25184 at:1526870
[asf @ 0x4303020] packet fragment position invalid 8192,2230 not in 2230
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] freeing incomplete packet size 23, new 14
[asf @ 0x4303020] packet_frag_size is invalid (1146-20)
[asf @ 0x4303020] ff asf bad header 76  at:1546873
[asf @ 0x4303020] invalid packet_length 606425945 at:1546882
[asf @ 0x4303020] ff asf bad header 15  at:1549231
[asf @ 0x4303020] invalid padsize 26754 at:1549234
[asf @ 0x4303020] ff asf bad header 9e  at:1553935
[asf @ 0x4303020] invalid padsize -294661960 at:1553942
[asf @ 0x4303020] ff asf bad header 54  at:1555351
[asf @ 0x4303020] ff asf skip 29582 (unknown stream)
[asf @ 0x4303020] ff asf bad header e5  at:1605291
[asf @ 0x4303020] invalid packet_length -808877693 at:1605296
[asf @ 0x4303020] packet fragment position invalid 16854754,7968 not in 95304
[asf @ 0x4303020] ff asf bad header a3  at:1634897
[asf @ 0x4303020] packet_replic_size 55243 is invalid
[asf @ 0x4303020] ff asf bad header d3  at:1642975
[asf @ 0x4303020] ff asf skip 0 (unknown stream)
    Last message repeated 30 times
[asf @ 0x4303020] ff asf bad header 62  at:1710067
[asf @ 0x4303020] invalid packet_length 1705525421 at:1710071
[asf @ 0x4303020] freeing incomplete packet size 95304, new 72333
[asf @ 0x4303020] Estimating duration from bitrate, this may be inaccurate
Guessed Channel Layout for  Input Stream #0.0 : mono
Input #0, asf, from 'fg2m4.wmv':
  Metadata:
    DeviceConformanceTemplate: L2
    WMFSDKNeeded    : 0.0.0.0000
    WMFSDKVersion   : 9.00.00.4509
    IsVBR           : 1
  Duration: 00:00:02.96, start: 0.000000, bitrate: 27694 kb/s
    Stream #0:0(eng): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, mono, fltp, 48 kb/s
    Stream #0:1(eng): Data: none, 2 kb/s
    Stream #0:2(eng): Video: g2m (G2M4 / 0x344D3247), rgb24, 1280x1024, 27648 kb/s, 29.97 tbr, 1k tbn, 1k tbc
Output #0, null, to 'pipe:':
  Metadata:
    DeviceConformanceTemplate: L2
    WMFSDKNeeded    : 0.0.0.0000
    WMFSDKVersion   : 9.00.00.4509
    IsVBR           : 1
    encoder         : Lavf55.13.101
    Stream #0:0(eng): Video: rawvideo (RGB[24] / 0x18424752), rgb24, 1280x1024, q=2-31, 200 kb/s, 90k tbn, 29.97 tbc
Stream mapping:
  Stream #0:2 -> #0:0 (g2m -> rawvideo)
Press [q] to stop, [?] for help
[null @ 0x45e2100] Encoder did not produce proper pts, making some up.
[g2m @ 0x433b920] Error decoding tile 3,20:00:00.03 bitrate=N/A    
[asf @ 0x4303020] freeing incomplete packet size 72333, new 71484
[asf @ 0x4303020] ff asf bad non zero
[asf @ 0x4303020] ff asf bad header 0  at:1826841
[asf @ 0x4303020] ff asf skip 7991 (unknown stream)
[asf @ 0x4303020] ff asf bad header 0  at:1834849
[asf @ 0x4303020] ff asf skip 7991 (unknown stream)
[asf @ 0x4303020] ff asf bad header 51  at:1842865
[asf @ 0x4303020] invalid padsize 51100 at:1842868
[asf @ 0x4303020] ff asf bad header d3  at:1842909
[asf @ 0x4303020] packet_replic_size 270249328 is invalid
[asf @ 0x4303020] freeing incomplete packet size 71484, new 2682
[g2m @ 0x433b920] Error decoding tile 7,3
==11149== Invalid write of size 4
==11149==    at 0x8348AE3: jpg_decode_data.constprop.3 (g2meet.c:250)
==11149==    by 0x834923F: kempf_decode_tile (g2meet.c:428)
==11149==    by 0x834A1C4: g2m_decode_frame (g2meet.c:763)
==11149==    by 0x8671ABD: avcodec_decode_video2 (utils.c:1986)
==11149==    by 0x80B2CDC: decode_video (ffmpeg.c:1653)
==11149==    by 0x5A517D27: ???
==11149==  Address 0x448806c is 0 bytes after a block of size 12 alloc'd
==11149==    at 0x40283EE: realloc (vg_replace_malloc.c:632)
==11149==    by 0x8348A76: jpg_decode_data.constprop.3 (g2meet.c:245)
==11149==    by 0x834923F: kempf_decode_tile (g2meet.c:428)
==11149==    by 0x834A1C4: g2m_decode_frame (g2meet.c:763)
==11149==    by 0x8671ABD: avcodec_decode_video2 (utils.c:1986)
==11149==    by 0x80B2CDC: decode_video (ffmpeg.c:1653)
==11149==    by 0x5A517D27: ???
==11149== 
[g2m @ 0x433b920] Invalid chunk size 2282 type CB
[asf @ 0x4303020] invalid padsize 11221505 at:1906839
[asf @ 0x4303020] ff asf bad header b6  at:1906853
[asf @ 0x4303020] invalid packet_length 0 at:1906859
[asf @ 0x4303020] ff asf bad header b5  at:1906893
[asf @ 0x4303020] invalid padsize 56325 at:1906897
[asf @ 0x4303020] ff asf bad header a2  at:1906969
[asf @ 0x4303020] ff asf bad non zero
[asf @ 0x4303020] ff asf bad header 44  at:1907113
[asf @ 0x4303020] unexpected packet_replic_size of -1931551521
[asf @ 0x4303020] freeing incomplete packet size 4244, new 67602
[asf @ 0x4303020] ff asf skip 7968 (unknown stream)
[asf @ 0x4303020] ff asf bad non zero
[asf @ 0x4303020] ff asf bad header 3  at:2002845
[asf @ 0x4303020] ff asf skip 0 (unknown stream)
[asf @ 0x4303020] ff asf bad header d4  at:2010857
[asf @ 0x4303020] ff asf skip 31631 (unknown stream)
[asf @ 0x4303020] freeing incomplete packet size 67602, new 74195
[asf @ 0x4303020] freeing incomplete packet size 74195, new 70485
[asf @ 0x4303020] unexpected packet_replic_size of 2
[asf @ 0x4303020] ff asf bad header 81  at:2130847
[asf @ 0x4303020] ff asf bad header 0  at:2138861
[asf @ 0x4303020] unexpected packet_replic_size of -358551681
[asf @ 0x4303020] ff asf bad header 91  at:2146901
[asf @ 0x4303020] invalid padsize 36202 at:2146902
[asf @ 0x4303020] ff asf bad header c  at:2154961
[asf @ 0x4303020] ff asf skip 7747 (unknown stream)
[asf @ 0x4303020] ff asf bad header 52  at:2163089
[asf @ 0x4303020] packet_replic_size 1426889732 is invalid
[asf @ 0x4303020] freeing incomplete packet size 70485, new 98471
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 0  at:2290855
[asf @ 0x4303020] ff asf skip 7990 (unknown stream)
[asf @ 0x4303020] ff asf bad header f3  at:2298877
[asf @ 0x4303020] invalid packet_length 1346263318 at:2298883
[asf @ 0x4303020] ff asf bad header 46  at:2298939
[asf @ 0x4303020] packet_replic_size 709231226 is invalid
[asf @ 0x4303020] ff asf bad header 36  at:2329343
[asf @ 0x4303020] invalid padsize 21268 at:2329349
[asf @ 0x4303020] ff asf bad header 64  at:2358115
[asf @ 0x4303020] invalid packet_length -1827876286 at:2358120
[asf @ 0x4303020] ff asf skip 7988 (unknown stream)
[asf @ 0x4303020] freeing incomplete packet size 98471, new 99958
[asf @ 0x4303020] freeing incomplete packet size 99958, new 67190
[asf @ 0x4303020] packet fragment position invalid 2147538869,7968 not in 67190
[asf @ 0x4303020] ff asf bad header be  at:2410897
[asf @ 0x4303020] invalid padsize 953509936 at:2410905
[asf @ 0x4303020] ff asf bad header cf  at:2410989
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] freeing incomplete packet size 67190, new 5441
[asf @ 0x4303020] freeing incomplete packet size 5441, new 39936
[asf @ 0x4303020] freeing incomplete packet size 39936, new 105472
[asf @ 0x4303020] freeing incomplete packet size 105472, new 302080
[asf @ 0x4303020] packet fragment position invalid 9040177,10 not in 302080
[asf @ 0x4303020] packet_frag_size is invalid (7968-8)
[asf @ 0x4303020] freeing incomplete packet size 302080, new 15611
[asf @ 0x4303020] freeing incomplete packet size 15611, new 8193
[asf @ 0x4303020] packet_frag_size is invalid (7986-35)
[asf @ 0x4303020] ff asf bad header 35  at:2546903
[asf @ 0x4303020] invalid padsize 47076 at:2546907
[asf @ 0x4303020] ff asf bad header 3  at:2554961
[asf @ 0x4303020] packet_replic_size 996175629 is invalid
[asf @ 0x4303020] ff asf bad header a1  at:2563107
[asf @ 0x4303020] ff asf skip 30 (unknown stream)
[asf @ 0x4303020] ff asf bad header 7a  at:2571381
[asf @ 0x4303020] invalid packet_length -248320584 at:2571389
[asf @ 0x4303020] ff asf bad header d1  at:2579477
[asf @ 0x4303020] invalid padsize 38075 at:2579480
[asf @ 0x4303020] ff asf bad header eb  at:2587659
[asf @ 0x4303020] invalid packet_length -1343336468 at:2587664
[asf @ 0x4303020] ff asf bad header 2a  at:2596027
[asf @ 0x4303020] invalid padsize 128 at:2596029
[asf @ 0x4303020] ff asf bad header df  at:2604757
[asf @ 0x4303020] invalid padsize -519166442 at:2604766
[asf @ 0x4303020] ff asf bad header 8b  at:2614231
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] ff asf bad header 24  at:2625643
[asf @ 0x4303020] packet_replic_size 93 is invalid
[asf @ 0x4303020] freeing incomplete packet size 8193, new 5867
[asf @ 0x4303020] freeing incomplete packet size 5867, new 12813
[g2m @ 0x433b920] Invalid cursor dimensions 0x0
[g2m @ 0x433b920] Error decoding tile 3,1
[g2m @ 0x433b920] Error decoding tile 2,4
[g2m @ 0x433b920] Error decoding tile 2,5
[g2m @ 0x433b920] Error decoding tile 4,1
[g2m @ 0x433b920] Error decoding tile 2,2
[g2m @ 0x433b920] Error decoding tile 4,2
[g2m @ 0x433b920] Error decoding tile 2,3
[g2m @ 0x433b920] Error decoding tile 4,3
[g2m @ 0x433b920] Error decoding tile 4,4
[g2m @ 0x433b920] Error decoding tile 4,5
[g2m @ 0x433b920] Error decoding tile 2,6
[g2m @ 0x433b920] Error decoding tile 3,6
[g2m @ 0x433b920] Error decoding tile 4,6
[asf @ 0x4303020] ff asf skip 5720 (unknown stream)
[asf @ 0x4303020] freeing incomplete packet size 26105, new 2800
[g2m @ 0x433b920] Error decoding tile 2,2
[asf @ 0x4303020] packet_frag_size is invalid (337-35)
[asf @ 0x4303020] ff asf bad header 17  at:2682903
[asf @ 0x4303020] invalid padsize 65024 at:2682908
[asf @ 0x4303020] ff asf bad header 20  at:2683665
[asf @ 0x4303020] packet_replic_size 15601 is invalid
[asf @ 0x4303020] ff asf bad header 6e  at:2692503
[asf @ 0x4303020] invalid packet_length -11725216 at:2692511
[asf @ 0x4303020] ff asf bad header 7e  at:2702177
[asf @ 0x4303020] invalid packet_length -1771430099 at:2702188
[asf @ 0x4303020] ff asf bad header 6b  at:2713531
[asf @ 0x4303020] invalid packet_length -1951393024 at:2713536
[asf @ 0x4303020] freeing incomplete packet size 41281, new 44088
[asf @ 0x4303020] packet fragment position invalid 4194304,4389 not in 44088
[asf @ 0x4303020] ff asf bad header 1b  at:2738055
[asf @ 0x4303020] invalid padsize 1207287103 at:2738059
[asf @ 0x4303020] freeing incomplete packet size 44088, new 21325
[asf @ 0x4303020] freeing incomplete packet size 21325, new 21324
[asf @ 0x4303020] freeing incomplete packet size 21324, new 24270
[asf @ 0x4303020] too long payload
[asf @ 0x4303020] packet fragment position invalid 4212922,99 not in 24270
[asf @ 0x4303020] packet_obj_size invalid
[asf @ 0x4303020] freeing incomplete packet size 24270, new 7889
[asf @ 0x4303020] freeing incomplete packet size 7889, new 23
[g2m @ 0x433b920] Wrong magic 47324D30
Error while decoding stream #0:2: Invalid data found when processing input
frame= 1837 fps=1237 q=0.0 size=N/A time=00:01:01.29 bitrate=N/A dup=1824 drop=2^C==11149== 
==11149== HEAP SUMMARY:
==11149==     in use at exit: 8,492,590 bytes in 135 blocks
==11149==   total heap usage: 1,140,704 allocs, 1,140,569 frees, 77,145,519 bytes allocated
==11149== 
==11149== LEAK SUMMARY:
==11149==    definitely lost: 0 bytes in 0 blocks
==11149==    indirectly lost: 0 bytes in 0 blocks
==11149==      possibly lost: 0 bytes in 0 blocks
==11149==    still reachable: 8,492,590 bytes in 135 blocks
==11149==         suppressed: 0 bytes in 0 blocks
==11149== Reachable blocks (those to which a pointer was found) are not shown.
==11149== To see them, rerun with: --leak-check=full --show-reachable=yes
==11149== 
==11149== For counts of detected and suppressed errors, rerun with: -v
==11149== ERROR SUMMARY: 1 errors from 1 contexts (suppressed: 23 from 6)

Change History (2)

comment:1 by Michael Niedermayer, 13 years ago

Resolution: fixed
Status: newclosed

comment:2 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavcodec
Keywords: g2m4 added
Priority: normalimportant
Version: unspecifiedgit-master
Note: See TracTickets for help on using tickets.