avcodec/g2meet: fix src pointer checks in kempf_decode_tile()

Fixes Ticket2842

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 2960576378d17d71cc8dccc926352ce568b5eec1)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>